@startuml ExpensePackageClassDiagram
hide circle
skinparam classAttributeIconSize 0

package "expense" {
    class Expense {
        - description : String
        - amount : Money
        - date : LocalDate
        - category : String
        + getDescription() : String
        + getAmount() : double
        + getDate() : LocalDate
        + getCategory() : String
        + setDescription(String)
        + setAmount(Money)
        + setDate(LocalDate)
        + setCategory(String)
    }

    class ExpenseManager {
        - expenses : ArrayList<Expense>
        - data : FinanceData
        - currency : String
        - expenseStorage : Storage
        + addExpense(String, double, LocalDate, String)
        + editExpense(int, String, double, LocalDate, String)
        + deleteExpense(int)
        + listExpenses()
        + listExpensesByCategory(String)
        + sortExpensesByDate(boolean)
        + printTopCategory()
        + printBottomCategory()
    }

    abstract class ExpenseCommand {
        + execute(ExpenseManager)
    }

    class AddExpenseCommand
    class EditExpenseCommand
    class DeleteExpenseCommand
    class ListExpenseCommand
    class ListCategoryExpenseCommand
    class SortExpenseCommand
    class TopCategoryExpenseCommand
    class BottomCategoryExpenseCommand
    class HelpExpenseCommand

    class ExpenseCommandParser {
        + parseCommand(String) : ExpenseParserResult
    }

    class ExpenseParserResult {
        - command : ExpenseCommand
        - feedback : String
        + getCommand() : ExpenseCommand
        + getFeedback() : String
        + hasCommand() : boolean
        + hasFeedback() : boolean
    }

    class HandleExpenseCommand {
        + handle(Scanner, ExpenseManager)
    }

    class FinanceData {
        + getBudgetManager() : BudgetManager
    }

    interface BudgetManager {
        + deductBudgetFromExpense(Expense) : boolean
        + modifyExpenseInBudget(Expense, Expense) : boolean
        + removeExpenseInBudget(Expense) : boolean
    }

    class Storage {
        + saveFile(ArrayList<>)
        + loadFile()
    }

    class ExpenseException extends Exception

    ' Relationships
    ExpenseManager --> Expense
    ExpenseManager --> FinanceData
    ExpenseManager --> Storage
    FinanceData --> BudgetManager

    ExpenseManager ..> ExpenseException : throws
    ExpenseCommandParser --> ExpenseParserResult
    ExpenseCommandParser ..> ExpenseException : throws
    ExpenseParserResult --> ExpenseCommand

    HandleExpenseCommand --> ExpenseManager
    HandleExpenseCommand --> ExpenseCommandParser

    ExpenseCommand <|-- AddExpenseCommand
    ExpenseCommand <|-- EditExpenseCommand
    ExpenseCommand <|-- DeleteExpenseCommand
    ExpenseCommand <|-- ListExpenseCommand
    ExpenseCommand <|-- ListCategoryExpenseCommand
    ExpenseCommand <|-- SortExpenseCommand
    ExpenseCommand <|-- TopCategoryExpenseCommand
    ExpenseCommand <|-- BottomCategoryExpenseCommand
    ExpenseCommand <|-- HelpExpenseCommand
}

@enduml
